--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -20,4 +20,11 @@ jobs:
           cache: "npm"
       - run: node secrets.js
       - run: echo '### Hello world from pull_request! 🚀' >> $GITHUB_STEP_SUMMARY
-      - run: exit 1
+      - name: Save PR number
+        run: |
+          mkdir -p ./pr
+          echo ${{ github.event.number }} > ./pr/NR
+      - uses: actions/upload-artifact@v4
+        with:
+          name: pr
+          path: pr/
