--- a/.github/workflows/pull-request-workflow-run.yaml
+++ b/.github/workflows/pull-request-workflow-run.yaml
@@ -4,7 +4,7 @@ name: Comment on the pull request
 # access to secrets
 on:
   workflow_run:
-    workflows: ["Receive PR"]
+    workflows: ["PullRequest"]
     types:
       - completed
 
