--- a/.github/workflows/pull-request-workflow-run.yaml
+++ b/.github/workflows/pull-request-workflow-run.yaml
@@ -15,6 +15,12 @@ jobs:
       github.event.workflow_run.event == 'pull_request' &&
       github.event.workflow_run.conclusion == 'success'
     steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+          cache: "npm"
       - run: node secrets.js
       - run: echo '### Hello world from workflow_run! 🚀' >> $GITHUB_STEP_SUMMARY
       - name: 'Download artifact'
