--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -23,7 +23,9 @@ jobs:
       - name: Save PR number
         run: |
           mkdir -p ./pr
-          echo ${{ github.event.number }} > ./pr/NR
+          echo ${{ github.event.number }} > ./pr/number
+          echo ${{ github.event.pull_request.head.repo.full_name }} ./pr/repository
+          echo ${{ github.event.pull_request.head.sha }} ./pr/sha
       - uses: actions/upload-artifact@v4
         with:
           name: pr
