--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -19,13 +19,10 @@ jobs:
           node-version: "20.x"
           cache: "npm"
       - run: node secrets.js
-      - run: echo '### Hello world from pull_request! 🚀' >> $GITHUB_STEP_SUMMARY
-      - name: Save PR number
-        run: |
-          mkdir -p ./pr
-          echo ${{ github.event.number }} > ./pr/number
-          echo ${{ github.event.pull_request.head.repo.full_name }} ./pr/repository
-          echo ${{ github.event.pull_request.head.sha }} ./pr/sha
+      - run: mkdir -p ./pr
+      - run: echo ${{ github.event.number }} > ./pr/number
+      - run: echo ${{ github.event.pull_request.head.repo.full_name }} ./pr/repository
+      - run: echo ${{ github.event.pull_request.head.sha }} ./pr/sha
       - uses: actions/upload-artifact@v4
         with:
           name: pr
