--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -19,10 +19,12 @@ jobs:
           node-version: "20.x"
           cache: "npm"
       - run: node secrets.js
-      - run: mkdir -p ./pr
-      - run: echo -n ${{ github.event.number }} > ./pr/number
-      - run: echo -n ${{ github.event.pull_request.head.repo.full_name }} > ./pr/repository
-      - run: echo -n ${{ github.event.pull_request.head.sha }} > ./pr/sha
+      - name: Save PR
+        run: |
+          mkdir -p ./pr
+          echo -n ${{ github.event.number }} > ./pr/number
+          echo -n ${{ github.event.pull_request.head.repo.full_name }} > ./pr/repository
+          echo -n ${{ github.event.pull_request.head.sha }} > ./pr/sha
       - uses: actions/upload-artifact@v4
         with:
           name: pr
